--- a/optima-web/src/main/webapp/api/css/layout.css
+++ b/optima-web/src/main/webapp/api/css/layout.css
@@ -44,7 +44,7 @@ float: left;
 margin: 0;
 font-size: 22px;
 display: block;
-width: 23%;
+width: 20%;
 height: 55px;
 font-weight: normal;
 text-align: left;
@@ -60,9 +60,9 @@ text-decoration: none;
 }
 
 header#header h2.section_title {
-text-align: center;
-text-indent: 4.5%;
-width: 68%;
+text-align: left;
+text-indent: 1.5%;
+width: 10%;
 background: url(../images/header_shadow.png) no-repeat left top;
 }
 
@@ -97,7 +97,7 @@ background: #F1F1F4 url(../images/secondary_bar.png) repeat-x;
 
 section#secondary_bar .user {
 float: left;
-width: 23%;
+width: 20%;
 height: 38px;
 }
 
@@ -193,7 +193,7 @@ margin: 0 5px;
 /* Sidebar */
 
 aside#sidebar {
-width: 23%;
+width: 20%;
 background: #E0E0E3 url(../images/sidebar.png) repeat;
 float: left;
 min-height: 500px;
