--- a/optima-web/src/main/webapp/api/css/layout.css
+++ b/optima-web/src/main/webapp/api/css/layout.css
@@ -67,16 +67,16 @@ background: url(../images/header_shadow.png) no-repeat left top;
 }
 
 .btn_view_site {
-float: left;
-width: 9%;
+float: right;
+width: 12%;
 }
 
 .btn_view_site a {
 display: block;
 margin-top: 12px;
-width: 91px;
+width: 191px;
 height: 27px;
-background: url(../images/btn_view_site.png) no-repeat;
+/*background: url(../images/btn_view_site.png) no-repeat;*/
 text-align: center;
 line-height: 29px;
 color: #fff;
@@ -353,11 +353,19 @@ text-decoration: none;
 text-decoration: underline;
 }
 
+/*
 #sidebar footer {
 margin-top: 20%;
+}*/
+
+#footer_bottom {
+	width:100%;
+	height:80px;
+	position:absolute;
+	bottom:0;
+	left:0;
+	text-align:center;
 }
-
-
 /* Main Content */
 
 
